# prescrit

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/client/: CMakeLists.txt
cpp/client/prescrit-client/: CMakeLists.txt  createuserdialog.cpp  createuserdialog.h  createuserdialog.ui  lib  lockscreen.cpp  lockscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpcclient.cpp  rpcclient.h  userlogin.cpp  userlogin.h  userlogin.ui
cpp/client/prescrit-client/lockscreen/: createuserwindow.cpp  createuserwindow.h  createuserwindow.ui  lockscreen.cpp  lockscreen.h  lockscreen.ui  logindialogwindow.cpp  logindialogwindow.h  logindialogwindow.ui
cpp/lib/: CMakeLists.txt  Config.cmake.in  structs.h  test-fr.h
cpp/lib/include/prescrit/: globals.h  structs.h  test-fr.h  utils.h
cpp/lib/include/prescrit/network/: rpc_interface.capnp.h
cpp/lib/include/prescrit/structs/: bandage.h  insurance.h  magistral.h  medication.h  normal.h  patient-file.h  patient.h  premade.h  prescriber.h  prescription-list.h  prescription.h  product.h  syringe.h  user.h
cpp/lib/include/prescrit/testing/: patient-tf.h  prescriber-tf.h  prescription-tf.h  products-tf.h
cpp/lib/include/prescrit/utils/: ingredient.h  location.h  phonenumbers.h  time.h  units.h
cpp/lib/src/: CMakeLists.txt  bandage.cpp  globalDefinitions.h  ingredient.cpp  ingredient.h  insurance.cpp  insurance.h  location.cpp  location.h  magistral.cpp  medication.cpp  normal.cpp  patient-tf.h  patient.capnp  patient.capnp.c++  patient.capnp.h  patient.cpp  patient.h  pharmacy_user.capnp  pharmacy_user.capnp.c++  pharmacy_user.capnp.h  phonenumbers.cpp  phonenumbers.h  prescriber-tf.h  prescriber.cpp  prescriber.h  prescription-tf.h  prescription.cpp  prescription.h  prescrit_interface.capnp  prescrit_interface.capnp.c++  prescrit_interface.capnp.h  product.cpp  product.h  products-tf.h  structDefinitions.h  syringe.cpp  testframework  testframework.cpp  time.cpp  (+4 more)
cpp/lib/src/network/: CMakeLists.txt  rpc_interface.capnp  rpc_interface.capnp.c++
cpp/lib/src/structs/: CMakeLists.txt  bandage.cpp  ingredient.cpp  magistral.cpp  normal.cpp  patient-file.cpp  patient.cpp  patient.h  premade.cpp  prescriber.cpp  prescription-list.cpp  product.cpp  user.cpp
cpp/lib/src/testFramework/: CMakeLists.txt  testframework.cpp
cpp/lib/src/utils/: CMakeLists.txt  phonenumbers.cpp  time.cpp
cpp/lib/tests/: CMakeLists.txt  automatedTests.sh  bandageTest.cpp  frameworkTest.cpp  ingredientListTest.cpp  ingredientTest.cpp  insuranceTest.cpp  medicationTest.cpp  patientTest.cpp  patientTests.cpp  premadeTest.cpp  prescriberTest.cpp  prescriptionListTest.cpp  prescriptionTest.cpp  productTest.cpp  syringeTest.cpp  testFrameworkTest.cpp
cpp/lib/tests/functional-testing/: CMakeLists.txt  ingredientListTest.cpp  ingredientTest.cpp  magistralTest.cpp  medicationTest.cpp  normalTest.cpp  patientTest.cpp  prescriptionListTest.cpp  productTest.cpp  syringeTest.cpp  timeTest.cpp
cpp/lib/tests/functional-testing/patient/: CMakeLists.txt  getAgeTest.cpp  patientTest.cpp
cpp/lib/tests/generation-testing/: CMakeLists.txt  bandageGenerationTest.cpp  dateGenerationTest.cpp  ingredientGenerationTest.cpp  locationGenerationTest.cpp  medicationGenerationTest.cpp  normalGenerationTest.cpp  patientGenerationTest.cpp  premadeGenerationTest.cpp  prescriberGenerationTest.cpp  prescriptionGenerationTest.cpp  productGenerationTest.cpp  syringeGenerationTest.cpp
cpp/server/: CMakeLists.txt  DatabaseHandler.cpp  DatabaseHandler.h  Mariadb.cpp  Mariadb.h  data_column.cpp  data_column.h  main.cpp  prescrit_core_impl.cpp  prescrit_core_impl.h  storable.cpp  storable.h  user.cpp  user.h
cpp/server/include/prescrit/database/: DatabaseHandler.h  storables.h
cpp/server/src/: CMakeLists.txt  lib  main.cpp  prescrit_core_impl.cpp
cpp/server/src/src/: storableinterface.h  storablepatient.h
cpp/structs_library/src/: globalDefinitions.h  structDefinitions.h
cpp/structs_library/src/src/: patient.cpp  patient.h  phonenumbers.h  time.h
